--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
 	<label for="subjet">Subject:</label>
 	<select name="subject" type="text" id="subject" required>
 		<option hidden disabled selected>Choose a subject</option>
-		<option value="1" requiered>I need a website / Budget +$300</option>
-		<option value="2">I need a website / Budget +$1000</option>
-		<option value="3">I need a website / Budget +$2500</option>
+		<option value="1" requiered>I need a landing page</option>
+		<option value="2">I need an online store</option>
+		<option value="3">I need a full website</option>
 		<option value="3">I have a question</option>
 	</select>
 	<label for="message">Message:</label>
