--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 	<label for="message">Message:</label>
 	<textarea name="message" id="message" rows="6" placeholder="Enter your message" required></textarea>
     <div class="col-12 form-group">
-    <div class="g-recaptcha" data-sitekey="6LeMlc0UAAAAANfWNgPTm1l5tl0dzhHvNuEFLwPg"></div>
+    <!-- <div class="g-recaptcha" data-sitekey="6LeMlc0UAAAAANfWNgPTm1l5tl0dzhHvNuEFLwPg"></div> -->
     </div>
     <div class="col-12">
     <input name="submit" type="submit" id="submit" value="Send Message">
