--- a/index.html
+++ b/index.html
@@ -230,6 +230,6 @@
 <script src="./js/script.js"></script>
 <script src='https://www.google.com/recaptcha/api.js'></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="./js/main.js"></script>
+<!-- <script src="./js/main.js"></script> -->
 </body>
 </html>
