--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 			<a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
 			<a href="#" class="github"><i class="fab fa-github"></i></li></a>
 			<a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
-			<a href="#" class="gmail"><i class="far fa-envelope"></i></a>
+			<a class="gmail"><i class="far fa-envelope"></i></a>
 		</p>
 		<form class="contact__form" method="post" action="mail.php">
 
