--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				</div>
 				<div class="portfolio-item">
 				<img src="./media/item2.jpg" alt="Portfolio preview #1">
-				<p class="icon-title">the great escape</p>
+				<p class="icon-title">notebook</p>
 				<div class="portfolio-icons">
 					<a href="https://github.com/wagnerhenriquez/web-development/tree/master/notebook" target="_blank" class="icon"><i class="fab fa-github mini-icon" title="See code on Github"></i></a>
 					<i class="fas fa-search-plus mini-icon" title="See more information"></i>
