--- a/index.html
+++ b/index.html
@@ -173,14 +173,17 @@
 </section>
 
 <footer class="section footer">
+	<article class="slide">
 		
 		<h2 orange-text>reach me at</h2>
 		<p class="redes-sociales">
 			<a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
 			<a href="#" class="github"><i class="fab fa-github"></i></li></a>
 			<a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
-			<a class="gmail"><i class="far fa-envelope"></i></a>
+			<a href="/#contact/1" class="gmail"><i class="far fa-envelope"></i></a>
 		</p>
+	</article>
+	<article class="slide">
 		<form class="contact__form" method="post" action="mail.php">
 
 <!-- form element -->
@@ -218,7 +221,8 @@
     </div>
     </div>
 <!-- end form element -->
-</form>
+	</form>
+	</article>
 	</footer>
 
 
