--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 		</p>
 	</article>
 	<article class="slide">
-		<form class="contact__form" method="post" action="mail.php">
+		<form class="contact__form" method="post">
 
 <!-- form element -->
 <div class="contact" id="contact2">
@@ -232,7 +232,7 @@
 
 <!-- <script src="./js/fullpage.js"></script> -->
 <script src="./js/script.js"></script>
-<script src='https://www.google.com/recaptcha/api.js'></script>
+<!-- <script src='https://www.google.com/recaptcha/api.js'></script> -->
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <!-- <script src="./js/main.js"></script> -->
 </body>
