--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>Frontend Web Developer | UI / UX Design | Wagner Henriquez's Portfolio</title>
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Oswald&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="./css/fullpage.css">
+	<!-- <link rel="stylesheet" href="./css/fullpage.css"> -->
 	<link rel="stylesheet" href="./css/estilos.css">
 </head>
 
