--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<title>Frontend Web Developer | UI / UX Design | Wagner Henriquez's Portfolio</title>
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Oswald&display=swap" rel="stylesheet">
-	<!-- <link rel="stylesheet" href="./css/fullpage.css"> -->
-	<link rel="stylesheet" href="./css/estilos.css">
+	<link rel="stylesheet" href="./css/fullpage.css">
+	<!-- <link rel="stylesheet" href="./css/estilos.css"> -->
 </head>
 
 
@@ -184,7 +184,7 @@
 		</p>
 	</article>
 	<article class="slide">
-		<form class="contact__form" method="post">
+		<form class="contact__form" method="post" action="mail.php">
 
 <!-- form element -->
 <div class="contact" id="contact2">
@@ -230,10 +230,10 @@
 
 
 
-<!-- <script src="./js/fullpage.js"></script> -->
+<script src="./js/fullpage.js"></script>
 <script src="./js/script.js"></script>
-<!-- <script src='https://www.google.com/recaptcha/api.js'></script> -->
+<script src='https://www.google.com/recaptcha/api.js'></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<!-- <script src="./js/main.js"></script> -->
+<script src="./js/main.js"></script>
 </body>
 </html>
