--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Oswald&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/fullpage.css">
-	<!-- <link rel="stylesheet" href="./css/estilos.css"> -->
+	<link rel="stylesheet" href="./css/estilos.css">
 </head>
 
 
