--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 			<a href="/#contact/1" class="gmail"><i class="far fa-envelope"></i></a>
 		</p>
 	</article>
-	<article class="slide">
+	<section class="slide">
 		<form class="contact__form" method="post" action="mail.php">
 
 <!-- form element -->
@@ -222,7 +222,7 @@
     </div>
 <!-- end form element -->
 	</form>
-	</article>
+	</section>
 	</footer>
 
 
