--- a/index.html
+++ b/index.html
@@ -173,15 +173,24 @@
 </section>
 
 <footer class="section footer">
-	
-		
-		
+<!-- social media icon footer -->
+<article class="slide">
+	<h2 orange-text>reach me at</h2>
+	<p class="redes-sociales">
+		<a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+		<a href="#" class="github"><i class="fab fa-github"></i></li></a>
+		<a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
+		<a href="/#contact/1" class="gmail"><i class="far fa-envelope"></i></a>
+	</p>
+</article>
+<!-- contact form footer  -->
+<article class="slide">
 
-		<form class="contact__form" method="post" action="mail.php">
+<form class="contact__form" method="post" action="mail.php">
 
 <!-- form element -->
 <div class="contact" id="contact2">
-	<!-- form message -->
+<!-- form message -->
     <div class="row">
         <div class="col-12">
             <div class="contact__msg" style="display: none">
@@ -190,34 +199,34 @@
         </div>
     </div>
 <!-- end message -->
-	<div class="close"><i class="fas fa-times x"></i></div>
+<div class="close"><i class="fas fa-times x"></i></div>
 			
-	<label for="name">Name:</label>
-	<input type="text" name="name" placeholder="Name" required>
-	<label for="email">Email:</label>
-	<input type="email" name="email" placeholder="Email" required>
-	<label for="subjet">Subject:</label>
-	<select name="subject" type="text" id="subject" required>
-		<option hidden disabled selected>Choose a subject</option>
-		<option value="1" requiered>I need a landing page</option>
-		<option value="2">I need an online store</option>
-		<option value="3">I need a full website</option>
-		<option value="3">I have a question</option>
-	</select>
-	<label for="message">Message:</label>
-	<textarea name="message" id="message" rows="6" placeholder="Enter your message" required></textarea>
-    <div class="col-12 form-group">
-    <div class="g-recaptcha" data-sitekey="6LeMlc0UAAAAANfWNgPTm1l5tl0dzhHvNuEFLwPg"></div>
-    </div>
-    <div class="col-12">
-    <input name="submit" type="submit" id="submit" value="Send Message">
-    </div>
-    </div>
+<label for="name">Name:</label>
+<input type="text" name="name" placeholder="Name" required>
+<label for="email">Email:</label>
+<input type="email" name="email" placeholder="Email" required>
+<label for="subjet">Subject:</label>
+<select name="subject" type="text" id="subject" required>
+	<option hidden disabled selected>Choose a subject</option>
+	<option value="1" requiered>I need a landing page</option>
+	<option value="2">I need an online store</option>
+	<option value="3">I need a full website</option>
+	<option value="3">I have a question</option>
+</select>
+<label for="message">Message:</label>
+<textarea name="message" id="message" rows="6" placeholder="Enter your message" required></textarea>
+<div class="col-12 form-group">
+<div class="g-recaptcha" data-sitekey="6LeMlc0UAAAAANfWNgPTm1l5tl0dzhHvNuEFLwPg"></div>
+</div>
+<div class="col-12">
+<input name="submit" type="submit" id="submit" value="Send Message">
+</div>
+</div>
 <!-- end form element -->
-	</form>
-	</footer>
-
-
+</form>
+</article>
+</footer>
+<!-- end main -->
 </main>
 
 
