--- a/index.html
+++ b/index.html
@@ -174,22 +174,8 @@
 
 <footer class="section footer">
 <!-- social media icon footer -->
-<article class="slide">
-	<h2 orange-text>reach me at</h2>
-	<p class="redes-sociales">
-		<a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
-		<a href="#" class="github"><i class="fab fa-github"></i></li></a>
-		<a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
-		<a href="/#contact/1" class="gmail"><i class="far fa-envelope"></i></a>
-	</p>
-</article>
-<!-- contact form footer  -->
-<article class="slide">
-
-<form class="contact__form" method="post" action="mail.php">
-
 <!-- form element -->
-<div class="contact" id="contact2">
+<div class="contact">
 <!-- form message -->
     <div class="row">
         <div class="col-12">
@@ -222,9 +208,8 @@
 <input name="submit" type="submit" id="submit" value="Send Message">
 </div>
 </div>
-<!-- end form element -->
 </form>
-</article>
+<!-- end form element -->
 </footer>
 <!-- end main -->
 </main>
