--- a/index.html
+++ b/index.html
@@ -174,6 +174,20 @@
 
 <footer class="section footer">
 <!-- social media icon footer -->
+<article class="slide">
+	<h2 orange-text>reach me at</h2>
+	<p class="redes-sociales">
+		<a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+		<a href="#" class="github"><i class="fab fa-github"></i></li></a>
+		<a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
+		<a href="/#contact/1" class="gmail"><i class="far fa-envelope"></i></a>
+	</p>
+</article>
+<!-- contact form footer  -->
+<article class="slide">
+
+<form class="contact__form" method="post" action="mail.php">
+
 <!-- form element -->
 <div class="contact">
 <!-- form message -->
@@ -210,6 +224,7 @@
 </div>
 </form>
 <!-- end form element -->
+</article>
 </footer>
 <!-- end main -->
 </main>
