--- a/index.html
+++ b/index.html
@@ -9,36 +9,31 @@
   	<meta name="author" content="Wagner Henriquez">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Frontend Web Developer | UI / UX Design | Wagner Henriquez's Portfolio</title>
-	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Oswald&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/fullpage.css">
 	<link rel="stylesheet" href="./css/estilos.css">
 </head>
 
-
+<!-- body -->
 <body>
 <!-- navbar -->
-	<nav class="nav">
-		<a href="#home" class="marca">Wagner Henriquez</a>
-
-		<ul id="menu" class="menu">
-			<li data-menuanchor="home">
-				<a href="#home" class="active">home</a>
-			</li>
-			<li data-menuanchor ="portfolio">
-				<a href="#portfolio">portfolio</a>
-			</li>
-			<li data-menuanchor ="contact">
-				<a href="#contact">contact</a>
-			</li>
-		</ul>
-
-	</nav>
+<nav class="nav">
+	<a href="#home" class="marca">Wagner Henriquez</a>
+	<ul id="menu" class="menu">
+		<li data-menuanchor="home">
+			<a href="#home" class="active">home</a>
+		</li>
+		<li data-menuanchor ="portfolio">
+			<a href="#portfolio">portfolio</a>
+		</li>
+		<li data-menuanchor ="contact">
+			<a href="#contact">contact</a>
+		</li>
+	</ul>
+</nav>
 
 <main id="fullpage">
 <!-- header section -->
 <header class="section header">
-	
 	<div class="container-title">
 		<h1 class="titulo"><span class="orange-text">I build</span> 
 		<span class="white-text">solutions</span></h1>
@@ -47,7 +42,7 @@
 	<div class="container-icon">
 		<p><a href="#portfolio" class="white-text"><i class="fas fa-chevron-down"></i></a></p>
 	</div>
-
+	<!-- header social icons -->
 	<div class="social">
 		<ul>
 			<li><a href="https://www.linkedin.com/in/wagnerhz/" title="Linkedin Profile"><i class="fab fa-linkedin-in"></i></a></li>
@@ -75,7 +70,7 @@
 
 		<div class="portfolio">
 				<div class="portfolio-item">
-				<img src="./media/item1.jpg" alt="Portfolio preview #1">
+				<img src="./media/item1.webp" alt="Portfolio preview #1">
 				<p class="icon-title">Clean Juicy</p>
 				<div class="portfolio-icons">
 					<a href="https://github.com/wagnerhenriquez/web-development/tree/master/orange" target="_blank" class="icon"><i class="fab fa-github mini-icon" title="See code on Github"></i></a>
@@ -84,7 +79,7 @@
 					</div>
 				</div>
 				<div class="portfolio-item">
-				<img src="./media/item2.jpg" alt="Portfolio preview #1">
+				<img src="./media/item2.webp" alt="Portfolio preview #2">
 				<p class="icon-title">notebook</p>
 				<div class="portfolio-icons">
 					<a href="https://github.com/wagnerhenriquez/web-development/tree/master/notebook" target="_blank" class="icon"><i class="fab fa-github mini-icon" title="See code on Github"></i></a>
@@ -108,7 +103,7 @@
 
 			<div class="portfolio">
 				<div class="portfolio-item">
-					<img src="./media/item3.jpg" alt="Portfolio preview #1">
+					<img src="./media/item3.webp" alt="Portfolio preview #3">
 					<p class="icon-title">rein deer</p>
 					<div class="portfolio-icons">
 						<a href="https://github.com/wagnerhenriquez/web-development/tree/master/reindeer" target="_blank" class="icon"><i class="fab fa-github mini-icon" title="See code on Github"></i></a>
@@ -117,7 +112,7 @@
 					</div>
 				</div>
 				<div class="portfolio-item">
-					<img src="./media/item4.jpg" alt="Portfolio preview #1">
+					<img src="./media/item4.webp" alt="Portfolio preview #4">
 					<p class="icon-title">burger town</p>
 					<div class="portfolio-icons">
 						<a href="https://github.com/wagnerhenriquez/burger-town-website" target="_blank" class="icon"><i class="fab fa-github mini-icon" title="See code on Github"></i></a>
@@ -142,7 +137,7 @@
 
 			<div class="portfolio">
 				<div class="portfolio-item">
-					<img src="./media/item5.jpg" alt="Portfolio preview #1">
+					<img src="./media/item5.webp" alt="Portfolio preview #5">
 					<p class="icon-title">aventura jewelers</p>
 					<div class="portfolio-icons">
 						<i class="fab fa-github mini-icon" title="See code on Github"></i>
@@ -151,7 +146,7 @@
 					</div>
 				</div>
 				<div class="portfolio-item">
-					<img src="./media/item6.jpg" alt="Portfolio preview #1">
+					<img src="./media/item6.webp" alt="Portfolio preview #6">
 					<p class="icon-title">novi b-rex</p>
 					<div class="portfolio-icons">
 						<i class="fab fa-github mini-icon" title="See code on Github"></i>
@@ -224,10 +219,10 @@
 <!-- end main -->
 </main>
 
-
-
+<!-- scripts -->
 <script src="./js/fullpage.js"></script>
 <script src="./js/script.js"></script>
+<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 <script src='https://www.google.com/recaptcha/api.js'></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="./js/main.js"></script>
