--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 		<div class="portfolio">
 				<div class="portfolio-item">
-				<img src="./media/item1.webp" alt="Portfolio preview #1">
+				<img src="./media/item1.webp" alt="Portfolio preview #1" id="preview1">
 				<p class="icon-title">Clean Juicy</p>
 				<div class="portfolio-icons">
 					<a href="https://github.com/wagnerhenriquez/web-development/tree/master/orange" target="_blank" class="icon"><i class="fab fa-github mini-icon" title="See code on Github"></i></a>
@@ -79,7 +79,7 @@
 					</div>
 				</div>
 				<div class="portfolio-item">
-				<img src="./media/item2.webp" alt="Portfolio preview #2">
+				<img src="./media/item2.webp" alt="Portfolio preview #2" id="preview2">
 				<p class="icon-title">notebook</p>
 				<div class="portfolio-icons">
 					<a href="https://github.com/wagnerhenriquez/web-development/tree/master/notebook" target="_blank" class="icon"><i class="fab fa-github mini-icon" title="See code on Github"></i></a>
@@ -103,7 +103,7 @@
 
 			<div class="portfolio">
 				<div class="portfolio-item">
-					<img src="./media/item3.webp" alt="Portfolio preview #3">
+					<img src="./media/item3.webp" alt="Portfolio preview #3" id="preview3">
 					<p class="icon-title">rein deer</p>
 					<div class="portfolio-icons">
 						<a href="https://github.com/wagnerhenriquez/web-development/tree/master/reindeer" target="_blank" class="icon"><i class="fab fa-github mini-icon" title="See code on Github"></i></a>
@@ -112,7 +112,7 @@
 					</div>
 				</div>
 				<div class="portfolio-item">
-					<img src="./media/item4.webp" alt="Portfolio preview #4">
+					<img src="./media/item4.webp" alt="Portfolio preview #4" id="preview4">
 					<p class="icon-title">burger town</p>
 					<div class="portfolio-icons">
 						<a href="https://github.com/wagnerhenriquez/burger-town-website" target="_blank" class="icon"><i class="fab fa-github mini-icon" title="See code on Github"></i></a>
@@ -137,7 +137,7 @@
 
 			<div class="portfolio">
 				<div class="portfolio-item">
-					<img src="./media/item5.webp" alt="Portfolio preview #5">
+					<img src="./media/item5.webp" alt="Portfolio preview #5" id="preview5">
 					<p class="icon-title">aventura jewelers</p>
 					<div class="portfolio-icons">
 						<i class="fab fa-github mini-icon" title="See code on Github"></i>
@@ -146,7 +146,7 @@
 					</div>
 				</div>
 				<div class="portfolio-item">
-					<img src="./media/item6.webp" alt="Portfolio preview #6">
+					<img src="./media/item6.webp" alt="Portfolio preview #6" id="preview6">
 					<p class="icon-title">novi b-rex</p>
 					<div class="portfolio-icons">
 						<i class="fab fa-github mini-icon" title="See code on Github"></i>
@@ -166,7 +166,7 @@
 		</article>
 
 </section>
-
+<!-- footer section -->
 <footer class="section footer">
 <!-- social media icon footer -->
 	<h2 orange-text>reach me at</h2>
