--- a/portfolio/orange/index.html
+++ b/portfolio/orange/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="./estilos.css">
 </head>
 <body>
-
+<!-- nav section -->
 	<nav class="nav">
 		<div class="logo">clean juicy</div>
 		<ul class="lista-1024">
@@ -26,9 +26,7 @@
 				<li><a href="./login">login</a></li>
 			</ul>
 	</nav>
-
-	<!-- menu hamburguesa movile -->
-		
+<!-- menu hamburguesa movile -->	
 	<div class="menu-wrap"> <!-- contenedor principal --> 
 		<input type="checkbox" class="toggler"> <!-- contenedor del input tipo checkbox -->
 		<div class="hamburger"><!-- La hamburguesa, su tamano definira el tamano de las lineas -->
@@ -49,8 +47,8 @@
 				</div>
 			</div>
 		</div>
-		<!-- fin del menu hamburguesa -->
-
+<!-- fin del menu hamburguesa -->
+<!-- wrapper absolute -->
 	<div class="title">
 		<h1>orange</h1>
 		<p class="parrafo-uno">Find your clean juice</p>
@@ -64,7 +62,6 @@
 	</div>
 	<div class="flecha-izq"><i class="fas fa-chevron-left"></i></div>
 	<div class="flecha-der"><i class="fas fa-chevron-right"></i></div>
-
 <script src="https://kit.fontawesome.com/bb499b2907.js" crossorigin="anonymous"></script>
 </body>
 </html>
