--- a/portfolio/reindeer/index.html
+++ b/portfolio/reindeer/index.html
@@ -92,7 +92,7 @@
 
 	<div class="video">
 		<p class="closeVideo">close</p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/NrLF_wBVdn4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/NrLF_wBVdn4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 	</div>
 	<!-- contacto modal -->
 		<div class="contact" id="contact2">
